# esp8266-rust-template

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
